fix: mobile view and tablet view

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img src="img/picture/win-logo.svg" alt="Wina" width="70px" />
         </a>
         <div class="navbar-toggle">
-          <p >tombol</p>
+          <p >menu</p>
         </div>
         <div class="navbar-items shadow-light">
           <ul class="navbar-nav" id="animate-nav">
@@ -282,7 +282,7 @@
           />
               <h3 class="" style="color: #010101">Framework</h3>
               <p style="color: #010101">
-                ReactJS, NodeJS, Bootstrap, SvelteJS, Sapper 
+                ReactJS, NodeJS, Bootstrap, SvelteJS
               </p>
             </div>
           </div>
@@ -421,7 +421,7 @@
         <div class="container">
           <h2 class="section-title">Get In Touch</h2>
           <div class="contact-container">
-            <div class="col-md-4">
+            <div>
               <div class="contact-info">
                 <h3 class="">Let's talk about everything!</h3>
                 <p class="">
